<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:icon="@drawable/ic_gitlab"
        android:title="@string/src"
        android:summary="@string/src_title">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://gitlab.com/cuynu/socksdroid"/>
    </Preference>
    <PreferenceCategory
        android:selectable="false"
        android:title="@string/connection">
        <PreferenceScreen
            android:icon="@drawable/ic_termux"
            android:title="@string/open_termux"
            android:summary="@string/open_termux_summary">
            <intent
                android:targetPackage="com.termux"
                android:targetClass="com.termux.HomeActivity" />
        </PreferenceScreen>
        <EditTextPreference
            android:key="adv_app_list"
            android:title="@string/adv_app_list"
            android:summary="@string/adv_app_list_sum"
            android:dependency="adv_per_app"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/advanced">
        <PreferenceScreen
            android:title="@string/advancedsettings"
            android:summary="@string/advancedsettings_summary">
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="udp_proxy"
                android:title="@string/udp_proxy"
                android:summary="@string/udp_proxy_sum"/>
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="adv_per_app"
                android:title="@string/adv_per_app"/>
            <CheckBoxPreference
                android:enabled="true"
                android:defaultValue="true"
                android:key="adv_app_bypass"
                android:title="@string/adv_app_bypass"
                android:summary="@string/adv_app_bypass_sum"
                android:dependency="adv_per_app"/>
            <EditTextPreference
                android:key="adv_dns"
                android:title="@string/adv_dns"
                android:singleLine="true"/>
            <ListPreference
                android:key="profile"
                android:title="@string/profile"/>
            <CheckBoxPreference
                android:key="auth_userpw"
                android:title="@string/auth_userpw"
                android:defaultValue="false"/>
            <EditTextPreference
                android:key="auth_username"
                android:title="@string/auth_username"
                android:dependency="auth_userpw"
                android:singleLine="true"/>
            <EditTextPreference
                android:key="auth_password"
                android:title="@string/auth_password"
                android:inputType="textPassword"
                android:dependency="auth_userpw"
                android:singleLine="true"/>
            <EditTextPreference
                android:key="server_ip"
                android:title="@string/server_ip"
                android:singleLine="true"/>
            <EditTextPreference
                android:key="server_port"
                android:title="@string/server_port"
                android:inputType="number"
                android:singleLine="true"/>
            <CheckBoxPreference
                android:key="ipv6_proxy"
                android:title="@string/ipv6_proxy"
                android:summary="@string/ipv6_proxy_sum"/>
            <EditTextPreference
                android:key="udp_gw"
                android:title="@string/udp_gw"
                android:singleLine="true"
                android:dependency="udp_proxy"/>
            <ListPreference
                android:key="adv_route"
                android:title="@string/adv_route"
                android:entries="@array/adv_routes"
                android:entryValues="@array/adv_routes_values"/>
            <EditTextPreference
                android:key="adv_dns_port"
                android:title="@string/adv_dns_port"
                android:inputType="number"
                android:singleLine="true"/>
            <CheckBoxPreference
                android:key="adv_auto_connect"
                android:title="@string/adv_auto_connect"/>
            <CheckBoxPreference
                android:key="use_gost"
                android:title="@string/use_gost"
                android:summary="@string/use_gost_sum"
                android:defaultValue="false"/>
            <ListPreference
                android:key="gost_transport"
                android:title="@string/gost_transport"
                android:summary="@string/gost_transport_sum"
                android:entries="@array/gost_transports"
                android:entryValues="@array/gost_transport_values"
                android:defaultValue="ws"
                android:dependency="use_gost"/>
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/appinfo_category">
        <Preference
            android:title="@string/appversion"
            android:summary="1.0.7" />
        <Preference
            android:title="@string/compiletime"
            android:summary="YYYY-MM-DD" />
        <Preference
            android:title="Commit"
            android:summary="">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://gitlab.com/cuynu/socksdroid/-/commits/main/?ref_type=HEADS" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
